# Proyecto-Semestral-GPU

./: CMakeLists.txt  auxilliary.h  chat_ex.cpp  chat_ex_mt.cpp  collisionKernel.cl  fragmentSh.txt  imgui.ini  init.h  initCl.cpp  initGL.cpp  kernel.cl  readme.md  triangularKernel.cl  vertexSh.txt
include/: body.h  camera3.h  init.h  interface.h
src/: CMakeLists.txt  auxilliary.cpp  body.cpp  camera3.cpp  initGL.cpp  interface.cpp
